# Verdant

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  FLUID_SIM_DEFINITIVE.md  GDD.md  HANDOFF.md  HANDOFF_FLUID_SIM.md  HANDOFF_RENDER_GAMEPAD.md  HANDOFF_SIM_WORLDGEN.md  LEVELGEN_DESIGN.md  Makefile  PLAN.md  PROGRESS_RENDER.md  README.md  SESSION_LOG_2026-04-16.md  VERDANT-MVP-BRANCH.md  WATER_SIM_REDESIGN.md  editor.html  gen5_implementation_spec.md  gen5_roadmap.md  mapedit.html  run.ps1  test.map  tier0_reusability_audit.md  tutorial_cave.cave  verdant_f1.c  verdant_sim_design.md
Archive/: CLAUDE.md  GDD.md  HANDOFF_RENDER.md  HANDOFF_RENDER_GAMEPAD.md  HANDOFF_RENDER_SCANNER.md  PROGRESS_SIM.md
checker/: diff_ticks.py  diff_ticks_v2.py  regression.py  regression_v2.py  test_diff_ticks.py  test_diff_ticks_v2.py  verify.py  verify_v2.py
data/: compounds.tsv  element_table.tsv  element_table_sources.md
docs/: WORLDGEN_SPEC.md
golden/: t0_compression_tick_00005.json  t0_fracture_tick_00001.json  t0_radiate_tick_00005.json  t0_ratchet_tick_00001.json  t0_static_tick_00005.json
golden_v2/: g5_grav_two_body_tick_00003.json  g5_grav_uniform_tick_00003.json  g5_melt_tick_00003.json  g5_mixed_phase_tick_00005.json  g5_pressure_drop_tick_00005.json  g5_radiative_boundary_tick_00005.json  g5_ratchet_tick_00030.json  g5_static_tick_00005.json  g5_temp_gradient_tick_00005.json  g6_water_static_tick_00005.json  t1_condensation_tick_00005.json  t1_evaporation_tick_00005.json  t1_humidity_tick_00005.json  t1_ice_melt_tick_00005.json  (+1 more)
reference_sim/: README.md  cell.py  (+12 more)
(+127 files in other folders)
